# DeliveryBot

./: .dockerignore  CMakeLists.txt  DeliveryBotMain.cpp  DeliveryBotMain.h  Dockerfile  Dockerfile.txt  ObjectDetector.cpp  ObjectDetector.h  OpenCVHeaders.h  Point.h  README.md  VideoCapturer.cpp  VideoCapturer.h  dockerignore.txt  main.cpp  main.h  vcpkg.json
UML Diagrams/: ClassDiagramSourse.drawio  Sequence diagram code.txt
include/: Data.h  Delbot.hpp  HSVColor.h  ObjectsDetector.h  ObjectsDetector.hpp  OrderQueue.hpp  Point.h  Publisher.h  Robot.h  Robot.hpp  TgBot.h
src/: Delbot.cpp  ObjectsDetector.cpp  OrderQueue.cpp  Publisher.cpp  Robot.cpp  StateMachineTest.cpp  TgBot.cpp
